
classDiagram
    class Main {
        +main() str
    }
    class SQLInjection {
        +test_injection(target_url: str) str
    }
    class XSSAttack {
        +test_xss(target_url: str) str
    }
    class SSRFExploit {
        +test_ssrf(target_url: str) str
    }
    Main --> SQLInjection
    Main --> XSSAttack
    Main --> SSRFExploit
